# criu-image-streamer

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  build.rs
.config/: nextest.toml
.github/workflows/: build.yml  check.yml  ci.yml  clippy.yml  codecov.yml  codeql.yml  pr.yml  publish.yml  push.yml  release.yml  test-analysis.yml  tests.yml
proto/: comm.proto  image.proto  img-streamer.proto  remote-image.proto  sync_criu_proto_files.sh
proto/criu/: apparmor.proto  autofs.proto  binfmt-misc.proto  bpfmap-data.proto  bpfmap-file.proto  cgroup.proto  core-aarch64.proto  core-arm.proto  core-loongarch64.proto  core-mips.proto  core-ppc64.proto  core-riscv64.proto  core-s390.proto  core-x86.proto  core.proto  cpuinfo.proto  creds.proto  eventfd.proto  eventpoll.proto  ext-file.proto  fdinfo.proto  fh.proto  fifo.proto  file-lock.proto  fown.proto  fs.proto  fsnotify.proto  ghost-file.proto  img-streamer.proto  inventory.proto  ipc-desc.proto  ipc-msg.proto  ipc-sem.proto  ipc-shm.proto  ipc-var.proto  macvlan.proto  memfd.proto  mm.proto  mnt.proto  netdev.proto  (+37 more)
scripts/ci/: Makefile  helpers.sh  regression-test.sh  release-summary-slack
src/: capture.rs  comm.rs  connection.rs  criu_connection.rs  endpoint_connection.rs  extract.rs  handshake.rs  image_patcher.rs  image_store.rs  lib.rs  main.rs  mmap_buf.rs  ord_by.rs  poller.rs  unix_pipe.rs  util.rs
src/image_store/: fs.rs  fs_overlay.rs  mem.rs  mod.rs
test/regression/: helper.bash  main.bats  workload.sh
tests/: cli_tests.rs  integration.bats  integration_test.rs  prepare-fedora-coverage-environment.sh  prepare-fedora-test-environment.sh  tests.rs
tests/helpers/: criu.rs  mod.rs  util.rs
