[package]
name = "image-streamer"
version = "1.0.0"
authors = ["Nicolas Viennot <Nicolas.Viennot@twosigma.com>", "Liana Koleva <liana@cedana.ai>"]
description = "Capture and extract CRIU + Cedana images via UNIX pipes"
edition = "2021"
license = "Apache-2.0"

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
chrono = "0.4"
slab = "0.4"
libc = "0.2"
prost = "0.11"
tonic = "0.9"
bytes = "1.1"
nix = "0.17"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4_flex = "0.11.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.58.0", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
crossbeam-utils = "0.8.20"

[build-dependencies]
prost-build = "0.11" # to generate protobuf wrappers

[dev-dependencies]
procinfo = "0.4" # to measure memory usage
crossbeam-utils = "0.7" # for scoped threads

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "cedana-image-streamer"
path = "src/comm.rs"
